#730: store loading time in step